Fixed navbar spacing and overflow on small screens by adding padding. Added functionality to the navbar allowing for scrolling to sections on the front page. Currently functions as intended but might need more testing for exact scroll distance.

--- a/src/App.css
+++ b/src/App.css
@@ -167,12 +167,18 @@
     grid-template-columns: repeat(1 minmax(0, 1fr));
   }
 }
-
+.containerCon1 {
+  max-width: 325px;
+  margin-left: auto;
+  margin-right: auto;
+}
 @media (min-width: 355px) {
   .containerCon1 {
     max-width: 325px;
     padding-top: 50px;
     padding-bottom: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   .heroNameText {
     text-shadow: 1px 1px 3px rgb(0, 0, 0);
@@ -573,7 +579,7 @@
 
     line-height: 1;
 
-    font-size: 40px;
+    font-size: 30px;
   }
   .gridclass {
     display: grid;
